# Python-Introduction

module_00/ex00/: Hello.py
module_00/ex01/: format_ft_time.py
module_00/ex02/: find_ft_type.py
module_00/ex03/: NULL_not_found.py
module_00/ex04/: whatis.py
module_00/ex05/: building.py
module_00/ex06/: filterstring.py  ft_filter.py  test_ft_filter.py
module_00/ex07/: sos.py
module_00/ex08/: Loading.py
module_00/ex09/: README.md  pyproject.toml
module_00/ex09/ft_package/: __init__.py  tools.py
module_00/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
module_01/ex00/: give_bmi.py
module_01/ex01/: array2D.py
