[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    { name = "eagle", email = "eagle@42.fr"}
]
keywords = ["eagle", "package", "42"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/eagle/ft_package"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"